# automata

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CodeCoverage.cmake
include/: automaton.h  cli.h  max_matching_prefix.h  regex.h  regex_class.h  regex_stat.h  stat.h  util.h
src/: automaton.cpp  cli.cpp  main.cpp  max_matching_prefix.cpp  regex.cpp
test/: automaton_test.cpp  regex_test.cpp  test.cpp
